@@ -1,3 +1,9 @@
+2009-03-30  Jan Hubicka  <jh@suse.cz>
+
+	* tree-eh.c (make_eh_edges): Set probability 100% to first edge out of RESX.
+	(tree_remove_unreachable_handlers): Cleanup EH predecestor detection and label
+	handling.
+
 2009-03-30  Vladimir Makarov  <vmakarov@redhat.com>
 
 	* ira-int.h (ira_allocno): Rename left_conflicts_num to
